fix: fixing navbar z-index

--- a/src/components/ChangeLangButton/styles.module.scss
+++ b/src/components/ChangeLangButton/styles.module.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   right: 0;
   margin: 1rem;
-  z-index: 1000;
+  z-index: 999;
   display: flex;
   flex-direction: column;
   align-items: center;
