--- a/src/components/Drawer/styles.module.scss
+++ b/src/components/Drawer/styles.module.scss
@@ -8,7 +8,7 @@
   display: none;
   top: 0;
   right: 0;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .drawerContainerIsOpen {
